JumpScript/tests/baselines/reference/parserEnumDeclaration4.errors.txt
tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnumDeclaration4.jump(1,6): error TS1003: Identifier expected.


==== tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnumDeclaration4.jump (1 errors) ====
    enum void {
         ~~~~
!!! error TS1003: Identifier expected.
    }